fix chapter page overlapping text

--- a/django/design_playground/max/chapter.css
+++ b/django/design_playground/max/chapter.css
@@ -9,6 +9,7 @@ html, body {
 body {
 	font-family: "Butler", serif;
 	color: #ffffff;
+
 	background-image: url("../res/lunatic_2014_MarlonHoffstadt.jpg");
 	background-repeat: no-repeat;
 	background-position: center center;
@@ -37,6 +38,7 @@ a:hover, a:focus, a:active {
 div {
     width: 100%;
     height: 100%;
+
     display: flex;
     flex-direction: column;
     flex-flow: center;
@@ -54,21 +56,6 @@ div.timeline {
     height: 5px;
 
     cursor: pointer;
-}
-
-div.chapter-overview {
-    position: fixed;
-    top: 5px;
-
-    width: 100%;
-    height: 5%;
-}
-
-div.chapter-overview .timeline-chapter{
-    display: inline-block;
-
-    width: auto;
-    height: auto;
 }
 
 a.header {
@@ -128,11 +115,20 @@ progress::-webkit-progress-value {
 
 .layer-container {
 	display: none;
+
+	position: relative;
+
 	width: 100%;
+
+    flex-direction: column;
+    flex-flow: center;
+    align-items: center;
+    justify-content: center;
 }
 
 .layer {
-	padding: 20px;
+    position: relative;
+
 	min-height: 200px;
 	text-align: center;
 	cursor: pointer;	
@@ -149,6 +145,18 @@ progress::-webkit-progress-value {
 	transition: visibility 1s, opacity 0.5s linear;
 }
 
+.layer:hover {
+	opacity: 0.7;
+}
+
+.layer:hover .layer-title {
+    display: none;
+}
+
+.layer:hover .layer-description {
+    display: flex;
+}
+
 .layer:nth-of-type(1) {
 	background-image: url("../res/marlon.jpg");	
 }
@@ -161,35 +169,19 @@ progress::-webkit-progress-value {
 	background-image: url("../res/maxresdefault.jpg");
 }
 
-.layer-title {
-	font-weight: 900;
+.layer .layer-title {
+    display: flex;
+
+    text-align: center;
 	font-size: 3em;
-	
-	visibility: visible;
-	opacity: 1.0;
-	transition: visibility 1s, opacity 0.5s linear;
 }
 
-.layer-description {
+.layer .layer-description {
+    display: none;
+
+	text-align: center;
 	font-size: 2em;
 	padding: 0px 20%;
-	text-align: center;	
-	visibility: hidden;
-	opacity: 0.0;
-  	transition: visibility 1s, opacity 0.5s linear;
 }
 
-.layer:hover {
-	opacity: 0.7;
-}
-
-.layer:hover .layer-title {
-	visibility: hidden;
-	opacity: 0.0;
-}
-
-.layer:hover .layer-description {
-	visibility: visible;
-	opacity: 1.0;
-}
 
