--- a/django/mainapp/static/mainapp/css/chapter.css
+++ b/django/mainapp/static/mainapp/css/chapter.css
@@ -37,6 +37,7 @@ a.mehr {
 div {
     width: 100%;
     height: 100%;
+
     display: flex;
     flex-direction: column;
     flex-flow: center;
@@ -137,63 +138,61 @@ input {
 
 div.layer-container {
     display: none;
+    position: relative;
+
     width: 100%;
     height: auto;
+
+    flex-direction: column;
+    flex-flow: center;
+    align-items: center;
+    justify-content: center;
 }
 
-div.layer-container .layer {
-    display: block;
+.layer {
+    position: relative;
+
     height: auto;
     min-height: 250px;
     width: 100%;
 
-    padding: 20px;
+    opacity: 0.8;
 
     text-align: center;
     cursor: pointer;
 
     background-repeat: no-repeat;
     background-position: center center;
-
-    /* stretch to full-screen */
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
     background-size: cover;
 
     transition: visibility 1s, opacity 0.5s linear;
 }
 
-.layer-title {
-    font-weight: 900;
-    font-size: 3em;
-
-    visibility: visible;
-    opacity: 1.0;
-    transition: visibility 1s, opacity 0.5s linear;
-}
-
-.layer-description {
-    font-size: 2em;
-    padding: 0px 20%;
-    text-align: center;
-    visibility: hidden;
-    opacity: 0.0;
-    transition: visibility 1s, opacity 0.5s linear;
-}
-
 .layer:hover {
-    opacity: 0.7;
+    opacity: 1.0;
 }
 
 .layer:hover .layer-title {
-    visibility: hidden;
-    opacity: 0.0;
+    display: none;
 }
 
 .layer:hover .layer-description {
-    visibility: visible;
-    opacity: 1.0;
+    display: flex;
+}
+
+.layer .layer-title {
+    display: flex;
+
+    text-align: center;
+	font-size: 7em;
+}
+
+.layer .layer-description {
+    display: none;
+
+    font-size: 3em;
+    padding: 0px 20%;
+    text-align: center;
 }
 
 /* Timeline */
